platforms/c/libsnips_hermes_full.h

/**
 * Enum representing the grain of a resolved date related value
 */
typedef enum {
  /**
   * The resolved value has a granularity of a year
   */
  SNIPS_GRAIN_YEAR = 0,
  /**
   * The resolved value has a granularity of a quarter
   */
  SNIPS_GRAIN_QUARTER = 1,
  /**
   * The resolved value has a granularity of a mount
   */
  SNIPS_GRAIN_MONTH = 2,
  /**
   * The resolved value has a granularity of a week
   */
  SNIPS_GRAIN_WEEK = 3,
  /**
   * The resolved value has a granularity of a day
   */
  SNIPS_GRAIN_DAY = 4,
  /**
   * The resolved value has a granularity of an hour
   */
  SNIPS_GRAIN_HOUR = 5,
  /**
   * The resolved value has a granularity of a minute
   */
  SNIPS_GRAIN_MINUTE = 6,
  /**
   * The resolved value has a granularity of a second
   */
  SNIPS_GRAIN_SECOND = 7,
} SNIPS_GRAIN;
/**
 * Enum describing the precision of a resolved value
 */
typedef enum {
  /**
   * The resolved value is approximate
   */
  SNIPS_PRECISION_APPROXIMATE = 0,
  /**
   * The resolved value is exact
   */
  SNIPS_PRECISION_EXACT = 1,
} SNIPS_PRECISION;
/**
 * Used as a return type of functions that can encounter errors
 */
typedef enum {
  /**
   * The function returned successfully
   */
  SNIPS_RESULT_OK = 0,
  /**
   * The function encountered an error, you can retrieve it using the dedicated function
   */
  SNIPS_RESULT_KO = 1,
} SNIPS_RESULT;
typedef enum {
  SNIPS_SESSION_INIT_TYPE_ACTION = 1,
  SNIPS_SESSION_INIT_TYPE_NOTIFICATION = 2,
} SNIPS_SESSION_INIT_TYPE;
/**
 * Enum type describing how to cast the value of a CSlotValue
 */
typedef enum {
  /**
   * Custom type represented by a char *
   */
  SNIPS_SLOT_VALUE_TYPE_CUSTOM = 1,
  /**
   * Number type represented by a CNumberValue
   */
  SNIPS_SLOT_VALUE_TYPE_NUMBER = 2,
  /**
   * Ordinal type represented by a COrdinalValue
   */
  SNIPS_SLOT_VALUE_TYPE_ORDINAL = 3,
  /**
   * Instant type represented by a CInstantTimeValue
   */
  SNIPS_SLOT_VALUE_TYPE_INSTANTTIME = 4,
  /**
   * Interval type represented by a CTimeIntervalValue
   */
  SNIPS_SLOT_VALUE_TYPE_TIMEINTERVAL = 5,
  /**
   * Amount of money type represented by a CAmountOfMoneyValue
   */
  SNIPS_SLOT_VALUE_TYPE_AMOUNTOFMONEY = 6,
  /**
   * Temperature type represented by a CTemperatureValue
   */
  SNIPS_SLOT_VALUE_TYPE_TEMPERATURE = 7,
  /**
   * Duration type represented by a CDurationValue
   */
  SNIPS_SLOT_VALUE_TYPE_DURATION = 8,
  /**
   * Percentage type represented by a CPercentageValue
   */
  SNIPS_SLOT_VALUE_TYPE_PERCENTAGE = 9,
  /**
   * Music Album type represented by a char *
   */
  SNIPS_SLOT_VALUE_TYPE_MUSICALBUM = 10,
  /**
   * Music Artist type represented by a char *
   */
  SNIPS_SLOT_VALUE_TYPE_MUSICARTIST = 11,
  /**
   * Music Track type represented by a char *
   */
  SNIPS_SLOT_VALUE_TYPE_MUSICTRACK = 12,
} SNIPS_SLOT_VALUE_TYPE;
typedef struct {
  const void *facade;
  void *user_data;
} CAsrBackendFacade;
typedef struct {
  const char *site_id;
  /**
   * Nullable
   */
  const char *session_id;
  int64_t start_signal_ms;
} CAsrStartListeningMessage;
typedef struct {
  const char *site_id;
  /**
   * Nullable
   */
  const char *session_id;
} CSiteMessage;
typedef struct {
  const char *text;
  /**
   * Nullable
   */
  const CAsrTokenArray *tokens;
  float likelihood;
  float seconds;
  const char *site_id;
  /**
   * Nullable
   */
  const char *session_id;
} CTextCapturedMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CAsrFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CAudioServerBackendFacade;
typedef struct {
  const uint8_t *wav_frame;
  int wav_frame_len;
  const char *site_id;
} CAudioFrameMessage;
typedef struct {
  const char *id;
  const char *site_id;
} CPlayFinishedMessage;
typedef struct {
  const char *id;
  const uint8_t *wav_bytes;
  int wav_bytes_len;
  const char *site_id;
} CPlayBytesMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CAudioServerFacade;
typedef struct {
  const void *handler;
  void *user_data;
} CProtocolHandler;
typedef struct {
  const void *facade;
  void *user_data;
} CDialogueBackendFacade;
/**
 * Result of the intent classifier
 */
typedef struct {
  /**
   * Name of the intent detected
   */
  const char *intent_name;
  /**
   * Between 0 and 1
   */
  float confidence_score;
} CNluIntentClassifierResult;
/**
 * A slot value
 */
typedef struct {
  /**
   * Points to either a *const char, a CNumberValue, a COrdinalValue,
   * a CInstantTimeValue, a CTimeIntervalValue, a CAmountOfMoneyValue,
   * a CTemperatureValue or a CDurationValue depending on value_type
   */
  const void *value;
  /**
   * The type of the value
   */
  SNIPS_SLOT_VALUE_TYPE value_type;
} CSlotValue;
/**
 * Struct describing a Slot
 */
typedef struct {
  /**
   * The resolved value of the slot
   */
  CSlotValue value;
  /**
   * The raw value as it appears in the input text
   */
  const char *raw_value;
  /**
   * Name of the entity type of the slot
   */
  const char *entity;
  /**
   * Name of the slot
   */
  const char *slot_name;
  /**
   * Start index of raw value in input text
   */
  int32_t range_start;
  /**
   * End index of raw value in input text
   */
  int32_t range_end;
  /**
   * Confidence score of the slot
   */
  float confidence_score;
} CSlot;
typedef struct {
  const CNluSlot *const *entries;
  int count;
} CNluSlotArray;
typedef struct {
  const CAsrTokenArray *const *entries;
  int count;
} CAsrTokenDoubleArray;
typedef struct {
  const char *session_id;
  /**
   * Nullable
   */
  const char *custom_data;
  const char *site_id;
  const char *input;
  const CNluIntentClassifierResult *intent;
  /**
   * Nullable
   */
  const CNluSlotArray *slots;
  /**
   * Nullable, the first array level represents the asr invocation, the second one the tokens
   */
  const CAsrTokenDoubleArray *asr_tokens;
  /**
   * Nullable
   */
  const float *asr_confidence;
} CIntentMessage;
typedef struct {
  const char *site_id;
  const char *session_id;
  /**
   * Nullable
   */
  const char *input;
  /**
   * Nullable
   */
  const char *custom_data;
  float confidence_score;
} CIntentNotRecognizedMessage;
typedef struct {
  SNIPS_SESSION_TERMINATION_TYPE termination_type;
  /**
   * Nullable,
   */
  const char *data;
} CSessionTermination;
typedef struct {
  const char *session_id;
  /**
   * Nullable
   */
  const char *custom_data;
  CSessionTermination termination;
  const char *site_id;
} CSessionEndedMessage;
typedef struct {
  const char *session_id;
  /**
   * Nullable
   */
  const char *custom_data;
  const char *site_id;
} CSessionQueuedMessage;
typedef struct {
  const char *session_id;
  /**
   * Nullable
   */
  const char *custom_data;
  const char *site_id;
  /**
   * Nullable
   */
  const char *reactivated_from_session_id;
} CSessionStartedMessage;
/**
 * An array of strings
 */
typedef struct {
  /**
   * Pointer to the first element of the array
   */
  const char *const *data;
  /**
   * Number of elements in the array
   */
  int size;
} CStringArray;
typedef struct {
  const char *session_id;
  const char *text;
  /**
   * Nullable
   */
  const CStringArray *intent_filter;
  /**
   * Nullable
   */
  const char *custom_data;
  /**
   * Nullable
   */
  const char *slot;
  unsigned char send_intent_not_recognized;
} CContinueSessionMessage;
typedef struct {
  const char *session_id;
  /**
   * Nullable
   */
  const char *text;
} CEndSessionMessage;
typedef struct {
  SNIPS_SESSION_INIT_TYPE init_type;
  /**
   * Points to either a *const char, a *const CActionSessionInit
   */
  const void *value;
} CSessionInit;
typedef struct {
  CSessionInit init;
  const char *custom_data;
  const char *site_id;
} CStartSessionMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CDialogueFacade;
typedef struct {
  const char *site_id;
  const char *model_id;
} CHotwordDetectedMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CHotwordFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CInjectionFacade;
typedef struct {
  const char *last_injection_date;
} CInjectionStatusMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CNluBackendFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CNluFacade;
typedef struct {
  /**
   * Nullable
   */
  const char *id;
  const char *input;
  const CNluIntentClassifierResult *intent;
  /**
   * Nullable
   */
  const CNluSlotArray *slots;
  /**
   * Nullable
   */
  const char *session_id;
} CNluIntentMessage;
typedef struct {
  const char *input;
  /**
   * Nullable
   */
  const char *id;
  /**
   * Nullable
   */
  const char *session_id;
  float confidence_score;
} CNluIntentNotRecognizedMessage;
typedef struct {
  const char *input;
  /**
   * Nullable
   */
  const CAsrTokenArray *asr_tokens;
  /**
   * Nullable
   */
  const CStringArray *intent_filter;
  /**
   * Nullable
   */
  const char *id;
  /**
   * Nullable
   */
  const char *session_id;
} CNluQueryMessage;
typedef struct {
  /**
   * Nullable
   */
  const char *id;
  const char *input;
  const char *intent_name;
  /**
   * Nullable
   */
  const CNluSlot *slot;
  /**
   * Nullable
   */
  const char *session_id;
} CNluSlotMessage;
typedef struct {
  const char *input;
  const CAsrTokenArray *asr_tokens;
  const char *intent_name;
  const char *slot_name;
  /**
   * Nullable
   */
  const char *id;
  /**
   * Nullable
   */
  const char *session_id;
} CNluSlotQueryMessage;
typedef struct {
  const char *sound_id;
  const uint8_t *wav_sound;
  int wav_sound_len;
} CRegisterSoundMessage;
typedef struct {
  /**
   * Nullable
   */
  const char *id;
  /**
   * Nullable
   */
  const char *session_id;
} CSayFinishedMessage;
typedef struct {
  const char *text;
  /**
   * Nullable
   */
  const char *lang;
  /**
   * Nullable
   */
  const char *id;
  const char *site_id;
  /**
   * Nullable
   */
  const char *session_id;
} CSayMessage;
typedef struct {
  const void *facade;
  void *user_data;
} CTtsBackendFacade;
typedef struct {
  const void *facade;
  void *user_data;
} CTtsFacade;
/**
 * Representation of a number value
 */
typedef double CNumberValue;
/**
 * Representation of an ordinal value
 */
typedef int64_t COrdinalValue;
/**
 * Representation of an instant value
 */
typedef struct {
  /**
   * String representation of the instant
   */
  const char *value;
  /**
   * The grain of the resolved instant
   */
  SNIPS_GRAIN grain;
  /**
   * The precision of the resolved instant
   */
  SNIPS_PRECISION precision;
} CInstantTimeValue;
/**
 * Representation of an interval value
 */
typedef struct {
  /**
   * String representation of the beginning of the interval
   */
  const char *from;
  /**
   * String representation of the end of the interval
   */
  const char *to;
} CTimeIntervalValue;
/**
 * Representation of an amount of money value
 */
typedef struct {
  /**
   * The currency
   */
  const char *unit;
  /**
   * The amount of money
   */
  float value;
  /**
   * The precision of the resolved value
   */
  SNIPS_PRECISION precision;
} CAmountOfMoneyValue;
/**
 * Representation of a temperature value
 */
typedef struct {
  /**
   * The unit used
   */
  const char *unit;
  /**
   * The temperature resolved
   */
  float value;
} CTemperatureValue;
/**
 * Representation of a duration value
 */
typedef struct {
  /**
   * Number of years in the duration
   */
  int64_t years;
  /**
   * Number of quarters in the duration
   */
  int64_t quarters;
  /**
   * Number of months in the duration
   */
  int64_t months;
  /**
   * Number of weeks in the duration
   */
  int64_t weeks;
  /**
   * Number of days in the duration
   */
  int64_t days;
  /**
   * Number of hours in the duration
   */
  int64_t hours;
  /**
   * Number of minutes in the duration
   */
  int64_t minutes;
  /**
   * Number of seconds in the duration
   */
  int64_t seconds;
  /**
   * Precision of the resolved value
   */
  SNIPS_PRECISION precision;
} CDurationValue;
SNIPS_RESULT hermes_asr_backend_publish_start_listening(const CAsrBackendFacade *facade,
                                                        void (*handler)(const CAsrStartListeningMessage*, void*));
SNIPS_RESULT hermes_asr_backend_publish_stop_listening(const CAsrBackendFacade *facade,
                                                       void (*handler)(const CSiteMessage*, void*));
SNIPS_RESULT hermes_asr_subscribe_partial_text_captured(const CAsrFacade *facade,
                                                        void (*handler)(const CTextCapturedMessage*, void*));
SNIPS_RESULT hermes_asr_subscribe_text_captured(const CAsrFacade *facade,
                                                void (*handler)(const CTextCapturedMessage*, void*));
SNIPS_RESULT hermes_audio_server_backend_subscribe_all_play_bytes(const CAudioServerBackendFacade *facade,
                                                                  void (*handler)(const CPlayBytesMessage*, void*));
SNIPS_RESULT hermes_audio_server_backend_subscribe_play_bytes(const CAudioServerBackendFacade *facade,
                                                              const char *site_id,
                                                              void (*handler)(const CPlayBytesMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_all_play_finished(const CAudioServerFacade *facade,
                                                             void (*handler)(const CPlayFinishedMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_audio_frame(const CAudioServerFacade *facade,
                                                       const char *site_id,
                                                       void (*handler)(const CAudioFrameMessage*, void*));
SNIPS_RESULT hermes_audio_server_subscribe_play_finished(const CAudioServerFacade *facade,
                                                         const char *site_id,
                                                         void (*handler)(const CPlayFinishedMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_continue_session(const CDialogueBackendFacade *facade,
                                                                void (*handler)(const CContinueSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_end_session(const CDialogueBackendFacade *facade,
                                                           void (*handler)(const CEndSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_backend_subscribe_start_session(const CDialogueBackendFacade *facade,
                                                             void (*handler)(const CStartSessionMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intent(const CDialogueFacade *facade,
                                              const char *intent_name,
                                              void (*handler)(const CIntentMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intent_not_recognized(const CDialogueFacade *facade,
                                                             void (*handler)(const CIntentNotRecognizedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_intents(const CDialogueFacade *facade,
                                               void (*handler)(const CIntentMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_ended(const CDialogueFacade *facade,
                                                     void (*handler)(const CSessionEndedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_queued(const CDialogueFacade *facade,
                                                      void (*handler)(const CSessionQueuedMessage*, void*));
SNIPS_RESULT hermes_dialogue_subscribe_session_started(const CDialogueFacade *facade,
                                                       void (*handler)(const CSessionStartedMessage*, void*));
SNIPS_RESULT hermes_hotword_subscribe_all_detected(const CHotwordFacade *facade,
                                                   void (*handler)(const CHotwordDetectedMessage*, void*));
SNIPS_RESULT hermes_hotword_subscribe_detected(const CHotwordFacade *facade,
                                               const char *hotword_id,
                                               void (*handler)(const CHotwordDetectedMessage*, void*));
SNIPS_RESULT hermes_injection_subscribe_injection_status(const CInjectionFacade *facade,
                                                         void (*handler)(const CInjectionStatusMessage*, void*));
SNIPS_RESULT hermes_nlu_backend_subscribe_partial_query(const CNluBackendFacade *facade,
                                                        void (*handler)(const CNluSlotQueryMessage*, void*));
SNIPS_RESULT hermes_nlu_backend_subscribe_query(const CNluBackendFacade *facade,
                                                void (*handler)(const CNluQueryMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_intent_not_recognized(const CNluFacade *facade,
                                                        void (*handler)(const CNluIntentNotRecognizedMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_intent_parsed(const CNluFacade *facade,
                                                void (*handler)(const CNluIntentMessage*, void*));
SNIPS_RESULT hermes_nlu_subscribe_slot_parsed(const CNluFacade *facade,
                                              void (*handler)(const CNluSlotMessage*, void*));
SNIPS_RESULT hermes_tts_backend_subscribe_register_sound(const CTtsBackendFacade *facade,
                                                         void (*handler)(const CRegisterSoundMessage*, void*));
SNIPS_RESULT hermes_tts_backend_subscribe_say(const CTtsBackendFacade *facade,
                                              void (*handler)(const CSayMessage*, void*));
SNIPS_RESULT hermes_tts_subscribe_say_finished(const CTtsFacade *facade,
                                               void (*handler)(const CSayFinishedMessage*, void*));